# tiny386

./: .gitignore  Makefile  README.md  adlib.c  amd64.c  amd64.h  amd64ins.def  fmopl.c  fmopl.h  fpu.c  fpu.h  i386.c  i386.h  i386ins.def  i8042.c  i8042.h  i8254.c  i8254.h  i8257.c  ide.c  ide.h  ini.c  kvm.c  kvm.h  main.c  misc.c  misc.h  ne2000.c  ne2000.h  pc.c  pc.h  pci.c  pcspk.c  pcspk.h  sb16.c  sb16.h  simd.inc  vga.c  vga.h  wifikbd.c  (+1 more)
esp/: .gitignore  CMakeLists.txt  README.elecrow7  README.elecrow7s3  build_board.sh  esp-idf-6.0.patch  esp-idf.patch  partitions.csv  sdkconfig  sdkconfig.elecrow7  sdkconfig.elecrow7s3  sdkconfig.jc4880p433  sdkconfig.jc4880p443  tiny386.ini  tiny386_elecrow7.ini  tiny386_elecrow7s3.ini
esp/main/: CMakeLists.txt  board_elecrow7.h  board_elecrow7s3.h  board_jc3248w535.h  board_jc4880p433.h  board_jc4880p443.h  common.h  esp_main.c  i2s.c  idf_component.yml  lcd_axs15231b.c  lcd_elecrow7.c  lcd_elecrow7s3.c  lcd_st7701.c  sdmmc_crc_wrap.c  storage.c  usb_input.c  wifi.c
glibc-fix/: glibc-fix.c  glibc-fix.h
linuxstart/: Makefile  Makefile.amd64  config_linux-3.2  config_linux-7.0  config_linux-amd64-3.2  config_linux-amd64-7.0  linuxstart.c  linuxstart.h  linuxstart_head.S  note.txt
osd/: atlas.inl  microui.c  microui.h  osd.c  osd.h
rawdraw/: CNFA.c  CNFA_alsa.c  CNFA_winmm.c  CNFGXDriver.c  alsa_wrapper.c  main.c  wifikbd.c  xlib_wrapper.c
scripts/: build.sh
sdl/: main.c
seabios/: config  patch
slirp/: bootp.c  ip.h  ip_icmp.c  ip_input.c  libslirp.h  misc.c  slirp.c  slirp.h  socket.c
tools/: wifikbd.c
(+14 files in other folders)
